--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id "androidx.navigation.safeargs.kotlin"
 }
 
 android {
@@ -34,6 +37,11 @@ android {
     buildFeatures{
         dataBinding = true
     }
+}
+
+repositories {
+    google()
+    jcenter()
 }
 
 dependencies {
@@ -76,8 +84,8 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
